# motoman

motoman_description/: CMakeLists.txt  package.xml
motoman_description/arms/gp7/urdf/: gp7.urdf.xacro  gp7_robot.urdf.xacro
motoman_description/grippers/robotiq_2f_140/urdf/: robotiq_2f_140_macro.xacro  robotiq_2f_140_transmission_macro.xacro  robotiq_arg2f.xacro  robotiq_arg2f_140_model_macro.xacro
motoman_description/grippers/robotiq_2f_85/urdf/: robotiq_2f_85_macro.xacro  robotiq_2f_85_transmission_macro.xacro  robotiq_arg2f.xacro  robotiq_arg2f_85_model_macro.xacro
motoman_description/launch/: motoman_upload.launch
motoman_description/urdf/: common.gazebo.xacro  gp7.urdf.xacro  gp7_robot_robotiq_2f_140.urdf.xacro  gp7_robot_robotiq_2f_140_workstation.urdf.xacro  gp7_robot_robotiq_2f_85.urdf.xacro  gp7_robot_robotiq_2f_85_workstation.urdf.xacro  gp7_robot_workstation.urdf.xacro  motoman.gazebo.xacro  motoman.transmission.xacro
motoman_gazebo/: CMakeLists.txt  package.xml
motoman_gazebo/controller/: arm_controller_gp7.yaml
motoman_gazebo/launch/: controller_utils.launch  gazebo_motoman.launch  motoman.launch
motoman_gp7_moveit_config/: package.xml
motoman_gp7_moveit_config/config/: controllers.yaml  gp7.srdf  ompl_planning.yaml  ros_controllers.yaml
motoman_gp7_moveit_config/launch/: chomp_planning_pipeline.launch.xml  demo.launch  demo_gazebo.launch  gazebo.launch  gp7_moveit_controller_manager.launch.xml  move_group.launch  planning_context.launch  ros_controllers.launch
motoman_gp7_support/urdf/: gp7.gazebo.xacro  gp7.transmission.xacro  (+3 more)
(+52 files in other folders)
