<?xml version="1.0"?>
<package format="2">
  <name>motoman_description</name>
  <version>0.0.0</version>
  <description>
      URDF description for Motoman robot arms
  </description>

  <author>Brian Flynn</author>
  <maintainer email="brian_flynn@uml.edu">Brian Flynn</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>urdf</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
  </export>
</package>
